change some href to routerLink

--- a/src/app/auth/register/confirm-account/confirm-account.component.html
+++ b/src/app/auth/register/confirm-account/confirm-account.component.html
@@ -3,7 +3,7 @@
   <div class="confirm-component">
     <img src="assets/images/green-tick.png">
     <p>bạn đã kích hoạt tài khoản</p>
-    <a href="/signin">Quay lại đăng nhập!</a>
+    <a routerLink="/signin">Quay lại đăng nhập!</a>
   </div>
 </div>
 <app-footer></app-footer>
