--- a/src/app/auth/register/non-activated-account/non-activated-account.component.html
+++ b/src/app/auth/register/non-activated-account/non-activated-account.component.html
@@ -5,7 +5,7 @@
     <p>Tài khoản của bạn chưa được kích hoạt!</p>
     <p>Xin vui lòng kích hoạt tài khoản để có thể sử dụng!!</p>
     <a href="" (click)="resendKey()">Gửi lại email kích hoạt!</a>
-    <a href="/signin">Quay lại đăng nhập!</a>
+    <a routerLink="/signin">Quay lại đăng nhập!</a>
   </div>
 </div>
 <app-footer></app-footer>
