--- a/src/app/auth/signin/recover-pass-form/recover-pass-form.component.html
+++ b/src/app/auth/signin/recover-pass-form/recover-pass-form.component.html
@@ -22,7 +22,7 @@
         </button>
       </div>
     </form>
-    <div class="bottom-line-recover-pass-form"><a href="signin">Trở về trang đăng nhập.</a></div>
+    <div class="bottom-line-recover-pass-form"><a routerLink="/signin">Trở về trang đăng nhập.</a></div>
   </div>
 </div>
 <app-footer></app-footer>
