--- a/src/app/pages/home/sub-posts/sub-posts.component.html
+++ b/src/app/pages/home/sub-posts/sub-posts.component.html
@@ -6,7 +6,7 @@
                 class="img-fluid my-3 img__sub" />
         </div>
         <div class="row">
-            <a href="{{item.link}}" class="text-break news-title" target="_blank">{{item.title}}</a>
+            <a routerLink="/{{item.link}}" class="text-break news-title">{{item.title}}</a>
         </div>
     </div>
 </div>
