--- a/src/app/post/post-details/post-details.component.html
+++ b/src/app/post/post-details/post-details.component.html
@@ -81,7 +81,7 @@
                     </div>
                     <div class="col-md-9 col-sm-12">
                         <div class="row w-100">
-                            <a href="bai-viet/{{item?.link}}" class="rel__link">
+                            <a routerLink="/bai-viet/{{item?.link}}" class="rel__link">
                                 <h6>{{item?.title}}</h6>
                             </a>
                         </div>
