--- a/src/app/auth/register/register-form/register-form.component.html
+++ b/src/app/auth/register/register-form/register-form.component.html
@@ -53,7 +53,7 @@
         </button>
       </div>
     </form>
-    <div class="bottom-line-register-form">Đã có tài khoản? <a href="signin">Đăng nhập.</a></div>
+    <div class="bottom-line-register-form">Đã có tài khoản? <a routerLink="/signin">Đăng nhập.</a></div>
   </div>
 </div>
 <app-footer></app-footer>
