--- a/src/app/auth/signin/signin-form/signin-form.component.html
+++ b/src/app/auth/signin/signin-form/signin-form.component.html
@@ -33,7 +33,7 @@
           </label>
 
         </div>
-        <div class="forgot-pass"><a href="recovery-password" >Quên mật khẩu?</a></div>
+        <div class="forgot-pass"><a routerLink="/recovery-password" >Quên mật khẩu?</a></div>
       </div>
       <div class="signin-btn-groups">
         <button class="btn btn-primary btn-rounded"  type="submit" id="button-accept-signin" mdbRipple
@@ -42,7 +42,7 @@
         </button>
       </div>
     </form>
-    <div class="bottom-line-signin-form">Chưa có tài khoản? <a href="register">Đăng kí.</a></div>
+    <div class="bottom-line-signin-form">Chưa có tài khoản? <a routerLink="/register">Đăng kí.</a></div>
   </div>
 </div>
 <app-footer></app-footer>
