--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -15,14 +15,14 @@
                 </div>
                 <div class="row">
                     <div class="d-flex justify-content-center">
-                        <a [href]="'chu-de/'+get_slug(ts_news[0].category||'')">
+                        <a [routerLink]="['/chu-de/',get_slug(ts_news[0].category||'')]">
                             <p class="fs-11 text-muted">{{ts_news[0].category}}</p>
                         </a>
                     </div>
                 </div>
                 <div class="row">
                     <div class="d-flex justify-content-center">
-                        <a href="{{ts_news[0].link}}" class="hot-title" target="_blank">
+                        <a routerLink="{{'/'+ts_news[0].link}}" class="hot-title">
                             <h6 id="hot-post">{{ts_news[0].title}}</h6>
                         </a>
                     </div>
@@ -49,7 +49,7 @@
 
             <div class="row" *ngFor="let item of get_list_with_amount(1,4,ts_news);">
                 <div class="col-md-6">
-                    <a href="{{item.link}}" class="news-title" target="_blank">
+                    <a routerLink="{{'/'+item.link}}" class="news-title">
                         <h6 class="fs-20 news-title">{{item.title}}</h6>
                     </a>
                 </div>
