--- a/src/app/post/post-list/newest-post/newest-post.component.html
+++ b/src/app/post/post-list/newest-post/newest-post.component.html
@@ -8,7 +8,7 @@
     <div class="col-md-6">
         <div class="row">
             <div class="d-flex justify-content-start">
-                <a href="{{item?.link}}" class="hot-title" target="_blank">
+                <a routerLink="/{{item?.link}}" class="hot-title">
                     <h6 class="hot-post">{{item?.title}}</h6>
                 </a>
             </div>
