--- a/src/app/post/post-list/post-list.component.html
+++ b/src/app/post/post-list/post-list.component.html
@@ -17,7 +17,7 @@
             </div>
             <div class="row">
                 <div class="d-flex justify-content-start">
-                    <a href="{{posts_list[0].link}}" class="hot-title" target="_blank">
+                    <a routerLink="/{{posts_list[0].link}}" class="hot-title">
                         <h6 class="hot-post">{{posts_list[0].title}}</h6>
                     </a>
                 </div>
@@ -58,7 +58,7 @@
             </div>
             <div class="row">
                 <div class="d-flex justify-content-start">
-                    <a href="{{posts_list[1].link}}" class="hot-title" target="_blank">
+                    <a routerLink="/{{posts_list[1].link}}" class="hot-title">
                         <h6 class="hot-post">{{posts_list[1].title}}</h6>
                     </a>
                 </div>
@@ -87,7 +87,7 @@
             <div *ngFor="let item of get_posts_with_amount(2,4) ;index as ind">
                 <div class="row">
                     <div class="d-flex justify-content-start">
-                        <a href="{{item.link}}" class="hot-title" target="_blank">
+                        <a routerLink="/{{item.link}}" class="hot-title">
                             <h6 class="hot-post">{{item.title}}</h6>
                         </a>
                     </div>
@@ -122,7 +122,7 @@
             </div>
             <div class="row mt-3 w-90">
                 <div class="d-flex justify-content-start">
-                    <a href="{{item.link}}" class="hot-title" target="_blank">
+                    <a routerLink="/{{item.link}}" class="hot-title">
                         <h6 class="new__post">{{item.title}}</h6>
                     </a>
                 </div>
