--- a/src/app/post/post-details/post-details.component.html
+++ b/src/app/post/post-details/post-details.component.html
@@ -16,17 +16,17 @@
                     <input type="hidden" name="article_id" formControlName="article_id">
                     <div class="row mt-4">
                         <textarea cols="25" rows="3" placeholder="Nội dung" formControlName="content"
-                            class="form-control w-95" placeholder="Nội dung"
-                            aria-describedby="addon-wrapping"></textarea>
+                            class="form-control w-95" placeholder="Nội dung" aria-describedby="addon-wrapping"
+                            required></textarea>
                     </div>
                     <div class="row mt-5">
                         <div class="col">
                             <input type="email" name="email" placeholder="Email" formControlName="email"
-                                class="form-control" placeholder="Email" aria-describedby="addon-wrapping">
+                                class="form-control" placeholder="Email" aria-describedby="addon-wrapping" required>
                         </div>
                         <div class="col">
                             <input type="text" name="fullname" placeholder="Họ và tên" formControlName="fullname"
-                                class="form-control" placeholder="Họ và tên" aria-describedby="addon-wrapping">
+                                class="form-control" placeholder="Họ và tên" aria-describedby="addon-wrapping" required>
                         </div>
                         <div class="col">
                             <button type="submit" class="btn btn-primary btn-rounded" id="button-accept-register"
