--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -26,8 +26,13 @@
                     <p><i class="p-4"></i>19130078@st.hcmuaf.edu.vn <br> </p>
                     <p><i class="p-4"></i>19130031@st.hcmuaf.edu.vn <br> </p>
                 </div>
+                <div class="row">
+                    <a href="/contact">
+                        <p class="text-dark contact__link">Liên hệ tòa soạn</p>
+                    </a>
+                </div>
             </div>
-            <div class="row d-flex justify-content-center socials__link">
+            <div class="row d-flex justify-content-center socials__link mt-4">
                 <div class="col-1"><a href="https://www.facebook.com/group36fe/" target="_blank"><i
                             class="fab fa-facebook-f"></i>Facebook</a></div>
                 <div class="col-1"><a href="https://twitter.com/home" target="_blank"><i
