--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -52,10 +52,9 @@
             <div class="collapse navbar-collapse  justify-content-center" id="navbarScroll">
                 <ul class="nav my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;" id="menu">
                     <li class="nav-item">
-                        <a class="nav-link news-topic text-dark" aria-current="page" routerLink="/home"><i
-                                class="fas fa-home fs-4"></i></a>
+                        <a class="nav-link news-topic text-dark" routerLink="/home"><i class="fas fa-home fs-4"></i></a>
                     </li>
-                    <li class="nav-item news-topic fw-bold" *ngFor="let item of feeds_list">
+                    <li class="nav-item news-topic fw-bold" *ngFor="let item of feeds_list;">
                         <a class="nav-link  text-dark" aria-current="page"
                             [routerLink]="'/chu-de/'+item?.slug">{{item.title}}</a>
                     </li>
